Purification de l'index

--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -10986,6 +10986,8 @@ form.user .btn-user {
 footer.sticky-footer {
   padding: 2rem 0;
   flex-shrink: 0;
+  position: stick;
+  bottom: 0;
 }
 
 footer.sticky-footer .copyright {
