Modifications du style

--- a/public/css/my-wishlist.css
+++ b/public/css/my-wishlist.css
@@ -3,10 +3,15 @@
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-    padding-top: 2rem;
-    height: 2rem;
+    /*position: absolute;
+    /*bottom: 0;*/
+    text-align: center;
+    background: #6EA;
+    width: 100%;
+}
+
+footer div {
+    margin: 0.5rem;
 }
 
 .nouvelleListe {
@@ -14,11 +19,25 @@ footer {
 }
 
 header {
-    position: absolute;
-    top: 0;
     height: 3rem;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: #9C0;
 }
 
 #content {
     margin-top: 3rem;
+    flex-grow: 1;
+    padding: 10px;
+}
+
+body {
+    height: 100vh;
+    min-width: 100%;
+    margin: 0 auto;
+    padding: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
