Ajout templates profll

--- a/public/css/my-wishlist.css
+++ b/public/css/my-wishlist.css
@@ -3,10 +3,8 @@
 }
 
 footer {
-    /*position: absolute;
-    /*bottom: 0;*/
     text-align: center;
-    background: #6EA;
+    /* background: #6EA; */
     width: 100%;
 }
 
