--- a/public/css/my-wishlist.css
+++ b/public/css/my-wishlist.css
@@ -51,6 +51,13 @@ body {
     padding-bottom: 1.25rem;
 }
 
+.profile {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.6rem;
+}
 .pageLogin {
     text-align: center;
     font-weight: bold;
