--- a/public/css/my-wishlist.css
+++ b/public/css/my-wishlist.css
@@ -3,8 +3,7 @@
 }
 
 .title {
-    margin-top:0.75rem;
-    margin-left:0.75rem;
+    padding: 1rem;
 }
 
 a.invisible-link {
@@ -18,6 +17,14 @@ a.invisible-link {
 
 .imageObjet {
     margin-right: 1.5rem;
+}
+
+.header-line {
+    width: 100%;
+    position: fixed;
+    top: 3rem;
+    height:2px;
+    background: rgb(115, 153, 0);
 }
 
 footer {
@@ -74,7 +81,7 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    padding: 0.6rem;
+    padding: 1rem;
 }
 .pageLogin {
     text-align: center;
